@@ -1,3 +1,8 @@
+2010-05-11  Romain Francois <romain@r-enthusiasts.com>
+
+	* inst/include/Rcpp/traits/*.h: added support for long long int and 
+	unsigned long long int, which is size_t on win64
+
 2010-05-10  Romain Francois <romain@r-enthusiasts.com>
 
 	* inst/include/Rcpp/Dimension.h: added a const operator[], requested
